Fix header text being cut off when navigating to anchors (#503)
Fixes #488 

Closes #502 
Closes #499 

Using `scroll-padding-top`. I am just discovering this CSS property, but it seems to be just the thing we need.

https://caniuse.com/?search=scroll-padding-top
https://developer.mozilla.org/en-US/docs/Web/CSS/scroll-padding-top

> This allows the author to exclude regions of the scrollport that are obscured by other content (such as fixed-positioned toolbars or sidebars) or to put more breathing room between a targeted element and the edges of the scrollport.

--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -54,6 +54,7 @@ $card-list-gap: 15px;
 // CSS Vars
 :root {
     --header-height: 60px;
+    --scroll-padding-top: calc(var(--header-height) + 16px);
 
     @media #{$bp-tablet-landscape-up} {
         --header-height: 72px;
